--- a/debian/control
+++ b/debian/control
@@ -5,7 +5,8 @@ Section: utils
 Priority: extra
 Build-Depends: debhelper (>= 9),
 	       pkg-config,
-         libssl-dev,
+	       libssl-dev,
+	       check,
 	       libjson0-dev,
 	       gengetopt,
 	       help2man,
