--- a/u2f-server/Makefile.in
+++ b/u2f-server/Makefile.in
@@ -109,6 +109,7 @@ build_triplet = @build@
 host_triplet = @host@
 @HAVE_LD_VERSION_SCRIPT_TRUE@am__append_1 = -Wl,--version-script=$(srcdir)/u2f-server.map
 @HAVE_LD_VERSION_SCRIPT_FALSE@am__append_2 = -export-symbols-regex '^u2fs_.*'
+@ENABLE_COV_TRUE@am__append_3 = --coverage
 subdir = u2f-server
 DIST_COMMON = $(srcdir)/Makefile.in $(srcdir)/Makefile.am \
 	$(srcdir)/u2f-server-version.h.in $(srcdir)/u2f-server.pc.in \
@@ -370,7 +371,7 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-AM_CFLAGS = $(WARN_CFLAGS)
+AM_CFLAGS = $(WARN_CFLAGS) $(am__append_3)
 AM_CPPFLAGS = -I$(srcdir)/.. -I$(builddir)/.. $(LIBJSON_CFLAGS) $(LIBSSL_CFLAGS)
 lib_LTLIBRARIES = libu2f-server.la
 u2f_server_includedir = $(includedir)/u2f-server
@@ -383,6 +384,7 @@ libu2f_server_la_LIBADD = $(HIDAPI_LIBS) $(LIBJSON_LIBS) $(LIBSSL_LIBS)
 libu2f_server_la_LDFLAGS = -no-undefined -version-info \
 	$(LT_CURRENT):$(LT_REVISION):$(LT_AGE) $(am__append_1) \
 	$(am__append_2)
+@ENABLE_COV_TRUE@AM_LDFLAGS = --coverage
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = u2f-server.pc
 all: all-am
