--- a/u2f-server/Makefile.in
+++ b/u2f-server/Makefile.in
@@ -266,6 +266,7 @@ GREP = @GREP@
 GTKDOC_CHECK = @GTKDOC_CHECK@
 GTKDOC_MKPDF = @GTKDOC_MKPDF@
 GTKDOC_REBASE = @GTKDOC_REBASE@
+HELP2ADOC = @HELP2ADOC@
 HELP2MAN = @HELP2MAN@
 HTML_DIR = @HTML_DIR@
 INSTALL = @INSTALL@
@@ -275,6 +276,8 @@ INSTALL_SCRIPT = @INSTALL_SCRIPT@
 INSTALL_STRIP_PROGRAM = @INSTALL_STRIP_PROGRAM@
 LD = @LD@
 LDFLAGS = @LDFLAGS@
+LIBCRYPTO_CFLAGS = @LIBCRYPTO_CFLAGS@
+LIBCRYPTO_LIBS = @LIBCRYPTO_LIBS@
 LIBJSON_CFLAGS = @LIBJSON_CFLAGS@
 LIBJSON_LIBS = @LIBJSON_LIBS@
 LIBOBJS = @LIBOBJS@
@@ -372,7 +375,8 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 AM_CFLAGS = $(WARN_CFLAGS) $(am__append_3)
-AM_CPPFLAGS = -I$(srcdir)/.. -I$(builddir)/.. $(LIBJSON_CFLAGS) $(LIBSSL_CFLAGS)
+AM_CPPFLAGS = -I$(srcdir)/.. -I$(builddir)/.. $(LIBJSON_CFLAGS) \
+	$(LIBSSL_CFLAGS)
 lib_LTLIBRARIES = libu2f-server.la
 u2f_server_includedir = $(includedir)/u2f-server
 u2f_server_include_HEADERS = u2f-server.h u2f-server-version.h
