--- a/debian/control
+++ b/debian/control
@@ -5,9 +5,10 @@ Section: utils
 Priority: extra
 Build-Depends: debhelper (>= 9),
 	       pkg-config,
+	       libglib2.0-dev,
 	       libssl-dev,
 	       check,
-	       libjson0-dev,
+	       libjson-c-dev,
 	       gengetopt,
 	       help2man,
 	       dh-autoreconf,
