debian/rules: Add gen-orig-source

--- a/debian/rules
+++ b/debian/rules
@@ -1,5 +1,7 @@
 #!/usr/bin/make -f
 
+include /usr/share/dpkg/pkg-info.mk
+
 %:
 	dh $@ --parallel --with autoreconf
 
@@ -16,3 +18,10 @@ override_dh_auto_clean:
 
 override_dh_compress:
 	dh_compress -Xu2f-server.pdf
+
+
+gen-orig-source:
+	git archive --format=tar.gz                                     \
+		--prefix=$(DEB_SOURCE)-$(DEB_VERSION_UPSTREAM)/         \
+		upstream/$(subst ~,_,$(DEB_VERSION_UPSTREAM))           \
+		-o ../$(DEB_SOURCE)_$(DEB_VERSION_UPSTREAM).orig.tar.gz
